<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_question"
            android:icon="@drawable/ic_question_answer_24px"
            android:title="@string/my_questions" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_app_24px"
            android:title="@string/log_out" />
    </group>

    <item android:title="@string/app_name" android:checkable="true">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_white_24px"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_phone_white_24px"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_report"
                android:icon="@drawable/ic_bug_report_24px"
                android:title="@string/report_issue" />
            <item
                android:id="@+id/nav_facebook"
                android:icon="@drawable/ic_facebook_icon"
                android:title="@string/join_us" />
            <item
                android:id="@+id/nav_shareapp"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_app" />
        </menu>
    </item>
</menu>