<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/scrolling_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:scaleX="@dimen/start_scale"
        android:scaleY="@dimen/start_scale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/larva" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_logo"
            android:contentDescription="@string/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tv_credentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:letterSpacing="0.3"
            android:textStyle="bold"
            android:maxLines="2"
            android:gravity="center_horizontal"
            android:textColor="@color/colorAccent"
            android:text="@string/motto"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:padding="8dp"
            android:drawableLeft="@drawable/ic_baseline_email_24px"
            android:drawableStart="@drawable/ic_baseline_email_24px"
            android:drawablePadding="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rect_text"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:drawableLeft="@drawable/ic_baseline_lock_24px"
            android:drawableStart="@drawable/ic_baseline_lock_24px"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rect_text"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_transparent"
            android:text="@string/log_in"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:padding="7dp"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="OR"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:focusable="true"
            android:clickable="true"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_transparent"
            android:drawableRight="@drawable/ic_baseline_navigate_next_24px"
            android:text="@string/create_new"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:padding="7dp"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="Forgot password?"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/tv_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:padding="8dp"
                android:textStyle="bold"
                android:focusable="true"
                android:clickable="true"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
