<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.techart.atszambia.MyQuestionsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_label"
                android:textColor="#ffffff"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:theme="@style/PrimaryFlatButton"
                android:layout_gravity="left" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/review_recyclerview"
        android:paddingTop="?attr/actionBarSize">
    </androidx.recyclerview.widget.RecyclerView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pb_loading"
        android:text="@string/no_comments"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/rv_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageButton
            android:id="@+id/commentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_comment_grey_24px"
            android:contentDescription="@string/comment_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_empty"
            android:textColor="@color/colorText"
            android:text="@string/no_questions"
            android:theme="@style/PrimaryFlatButton"/>
        <Button
            android:id="@+id/bt_ask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/ask"
            android:textAllCaps="true"/>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
