<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_news"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/news_cover"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tv_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:layout_margin="1dp"
                android:textColor="@color/colorAccent"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="32sp"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pb_news"
                android:layout_centerInParent="true"
                android:layout_gravity="center" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/comment_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/commentBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_comment_grey_24px"
                    android:contentDescription="@string/comment_icon" />

                <TextView
                    android:id="@+id/tv_comments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:layout_marginLeft="7dp"
                    android:text="@string/initial_value"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/views_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:orientation="horizontal"
                android:layout_toRightOf="@+id/comment_layout">
                <ImageButton
                    android:id="@+id/bt_views"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_visibility_grey_24px"
                    android:contentDescription="@string/view_icon" />
                <TextView
                    android:id="@+id/tv_numviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:text="@string/initial_value"
                    android:textSize="14sp" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="7dp"
                android:textColor="@color/colorText"
                android:text="@string/just_now"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>