<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_answer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_staff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:text="@string/staff"
            android:padding="5dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/question_mark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:padding="5dp"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/tv_circular_background"
        android:textColor="@android:color/white"
        android:padding="5dp"
        android:autoLink="phone"
        android:textSize="16sp" />
    <ImageView
        android:id="@+id/iv_sample"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/affected_crop_image_sample"
        app:srcCompat="@drawable/ic_camera_24px"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorActive"
        android:padding="5dp"
        android:textSize="14sp" />
</LinearLayout>